fix(login css): alignment between remember me and forgotten passwords

--- a/src/main/resources/theme/cloud-iam-redesign/login/resources/scss/login.scss
+++ b/src/main/resources/theme/cloud-iam-redesign/login/resources/scss/login.scss
@@ -62,7 +62,7 @@ form {
 }
 
 .login-pf-settings {
-  @apply flex items-center;
+  @apply flex items-baseline;
 }
 
 .login-pf-settings div span a {
